# advent-of-code

./: .gitignore  pyproject.toml
src/aoc/: __init__.py  cli.py  context.py  paths.py  runner.py  template.py
src/aoc/utils/: __init__.py  input.py
src/year_2024/: __init__.py  day_01.py  day_02.py  day_03.py
src/year_2025/: day_01.py  day_02.py
