[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc"
version = "0.1.0"
description = "Advent of Code solutions"
authors = [
    {name = "Anton Zhurba",email = "zhurba.anton@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pyparsing>=3.0.0",
    "hatchling (>=1.27.0,<2.0.0)",
]

[project.scripts]
aoc = "aoc.cli:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/aoc",
    "src/year_2024",
    "src/year_2025"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
